--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -120,9 +120,9 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\GameManager.cs" />
-    <Compile Include="Model\GameObject.cs" />
+    <Compile Include="Model\Entities\GameObject.cs" />
     <Compile Include="Model\PhysicsLayer.cs" />
-    <Compile Include="Model\PlayerShip.cs" />
+    <Compile Include="Model\Entities\PlayerShip.cs" />
     <Compile Include="View\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
