--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -119,6 +119,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\Entities\PlayerBullet.cs" />
     <Compile Include="Model\GameManager.cs" />
     <Compile Include="Model\Entities\GameObject.cs" />
     <Compile Include="Model\Input.cs" />
