Move enemies to new namespace

--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -119,11 +119,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Model\Entities\AggresiveEnemy.cs" />
-    <Compile Include="Model\Entities\BasicEnemy.cs" />
+    <Compile Include="Model\Entities\Enemies\AggresiveEnemy.cs" />
+    <Compile Include="Model\Entities\Enemies\BasicEnemy.cs" />
     <Compile Include="Model\Entities\Bullet.cs" />
-    <Compile Include="Model\Entities\Enemy.cs" />
+    <Compile Include="Model\Entities\Enemies\Enemy.cs" />
     <Compile Include="Model\Entities\EnemyBullet.cs" />
+    <Compile Include="Model\Entities\Enemies\IntermediateEnemy.cs" />
     <Compile Include="Model\Entities\PlayerBullet.cs" />
     <Compile Include="Model\GameManager.cs" />
     <Compile Include="Model\Entities\GameObject.cs" />
@@ -140,6 +141,9 @@
     </Compile>
     <Compile Include="View\Sprites\BasicEnemySprite.xaml.cs">
       <DependentUpon>BasicEnemySprite.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Sprites\IntermediateEnemySprite.xaml.cs">
+      <DependentUpon>IntermediateEnemySprite.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Sprites\ISpriteRender.cs" />
     <Compile Include="View\Sprites\PlayerBulletSprite.xaml.cs">
@@ -178,6 +182,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Sprites\BasicEnemySprite.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Sprites\IntermediateEnemySprite.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
