--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -126,12 +126,14 @@
     <Compile Include="Model\Nodes\Effects\Explosion.cs" />
     <Compile Include="Model\Nodes\Entities\Bullet.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\AggresiveEnemy.cs" />
+    <Compile Include="Model\Nodes\Entities\EnemyBullet.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\IntermediateEnemy.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\BasicEnemy.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\Enemy.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\TestBoss.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\TestBossTarget.cs" />
     <Compile Include="Model\Nodes\Entities\Entity.cs" />
+    <Compile Include="Model\Nodes\Entities\PlayerBullet.cs" />
     <Compile Include="Model\Nodes\Entities\PlayerShip.cs" />
     <Compile Include="Model\Nodes\Levels\Level1.cs" />
     <Compile Include="Model\Nodes\Levels\TestBossLevel.cs" />
