Add AnimatedSprite to project

--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\Input.cs" />
+    <Compile Include="Model\Nodes\AnimatedSprite.cs" />
     <Compile Include="Model\Nodes\Area.cs" />
     <Compile Include="Model\Nodes\CollisionArea.cs" />
     <Compile Include="Model\Nodes\Effects\BackgroundStar.cs" />
