Add animation frames for IntermediateEnemy

--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -188,6 +188,11 @@
     <Compile Include="View\Sprites\Entities\Enemies\BasicLightsLit.xaml.cs">
       <DependentUpon>BasicLightsLit.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Sprites\Entities\Enemies\IntermediateEnemySprite2.xaml.cs">
+      <DependentUpon>IntermediateEnemySprite2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Sprites\Entities\Enemies\IntermediateEnemySprite1.xaml.cs">
+      <DependentUpon>IntermediateEnemySprite1.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Sprites\ISpriteRender.cs" />
     <Compile Include="View\Sprites\Entities\PlayerBulletSprite.xaml.cs">
@@ -276,6 +281,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\Sprites\Entities\Enemies\IntermediateEnemySprite2.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\Sprites\Entities\Enemies\IntermediateEnemySprite1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
