Add LifeCounter to project

--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Model\Nodes\Levels\LevelBase.cs" />
     <Compile Include="Model\Nodes\RenderableNode.cs" />
     <Compile Include="Model\Nodes\UI\Label.cs" />
+    <Compile Include="Model\Nodes\UI\LifeCounter.cs" />
     <Compile Include="Model\PhysicsLayer.cs" />
     <Compile Include="Model\Nodes\SpriteNode.cs" />
     <Compile Include="Model\Nodes\Timer.cs" />
