Add Gun and EnemyGun to prroject

--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -139,7 +139,9 @@
     <Compile Include="Model\Nodes\Entities\Enemies\IntermediateEnemy.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\BasicEnemy.cs" />
     <Compile Include="Model\Nodes\Entities\Enemies\Enemy.cs" />
+    <Compile Include="Model\Nodes\Entities\EnemyGun.cs" />
     <Compile Include="Model\Nodes\Entities\Entity.cs" />
+    <Compile Include="Model\Nodes\Entities\Gun.cs" />
     <Compile Include="Model\Nodes\Entities\LevelShield.cs" />
     <Compile Include="Model\Nodes\Entities\PlayerBullet.cs" />
     <Compile Include="Model\Nodes\Entities\PlayerShip.cs" />
