--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -120,6 +120,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\DoubleExtensions.cs" />
     <Compile Include="Model\AnimationFrame.cs" />
     <Compile Include="Model\EnemyType.cs" />
     <Compile Include="Model\Input.cs" />
